<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.partyutt.OwnerParty"
    android:orientation="vertical">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            style="@style/CreatePartyLayout">
            <TextView
                android:layout_weight="1"
                style="@style/CreatePartyLbl"
                android:text="@string/createparty_titre"
                android:id="@+id/lbltitre"/>

            <EditText
                android:layout_weight="1"
                style="@style/CreatePartyEdt"
                android:text="Name"
                android:id="@+id/partytitle"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CreatePartyLayout">
            <TextView
                android:layout_weight="1"
                style="@style/CreatePartyLbl"
                android:text="@string/createparty_date"
                android:id="@+id/lblheure" />

            <TextView
                android:layout_weight="1"
                style="@style/CreatePartyEdt"
                android:hint="@string/createparty_date"
                android:id="@+id/partydate"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CreatePartyLayout">
            <TextView
                style="@style/CreatePartyLbl"
                android:layout_weight="1"
                android:text="@string/createparty_heure"
                android:id="@+id/lbldate" />

            <TextView
                android:layout_weight="1"
                style="@style/CreatePartyEdt"
                android:hint="@string/createparty_heure"
                android:id="@+id/partyheure"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CreatePartyLayout">
            <TextView
                android:layout_weight="1"
                style="@style/CreatePartyLbl"
                android:text="@string/createparty_address"
                android:id="@+id/lvladdress" />

            <EditText
                android:layout_weight="1"
                style="@style/CreatePartyEdt"
                android:text="Name"
                android:id="@+id/partyaddress"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <RelativeLayout
            style="@style/LigneDeSeparation"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <EditText
                style="@style/CreatePartyEdt"
                android:id="@+id/editinviteemail"
                android:hint="@string/createparty_email"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:entries="@array/role_array"
                android:dropDownSelector="@android:drawable/spinner_dropdown_background"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_addinvite"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createparty_ajout" />

        </LinearLayout>
        <RelativeLayout
            style="@style/LigneDeSeparation"/>
        <!--<ScrollView
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#EAEAEA">-->
        <ListView
            android:layout_weight="1"
            android:id="@+id/listView_Invite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <!-- </ScrollView>-->

        <Button
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/createparty_valider"
            android:id="@+id/btncreateparty"/>
    </LinearLayout>

</LinearLayout>
