<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.partyutt.CreateParty"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            style="@style/CreatePartyLayout">
            <TextView
                style="@style/CreatePartyLbl"
                android:text="@string/createparty_titre"
                android:id="@+id/lbltitre"/>

            <EditText
                style="@style/CreatePartyEdt"
                android:text="Name"
                android:id="@+id/partytitle"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CreatePartyLayout">
            <TextView
                style="@style/CreatePartyLbl"
                android:text="@string/createparty_date"
                android:id="@+id/lbldate" />

            <EditText
                style="@style/CreatePartyEdt"
                android:text="Name"
                android:id="@+id/partydate"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CreatePartyLayout">
            <TextView
                style="@style/CreatePartyLbl"
                android:text="@string/createparty_address"
                android:id="@+id/lvladdress" />

            <EditText
                style="@style/CreatePartyEdt"
                android:text="Name"
                android:id="@+id/partyaddress"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_weight="9"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                    <TableRow
                        android:background="@drawable/border_table_row"
                        android:id="@+id/columnaddppl"
                        android:layout_width="fill_parent"
                        android:layout_height="0px">
                        <TextView
                            style="@style/CreatePartyAddPpl"
                            android:text="@string/createparty_ajoutNouvelInvite"/>
                    </TableRow>
            </TableLayout>
        </ScrollView>

        <Button
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/createparty_valider"
            android:id="@+id/btncreateparty"/>
    </LinearLayout>

</LinearLayout>
